--- a/package.json
+++ b/package.json
@@ -3,18 +3,14 @@
   "version": "0.1.0",
   "description": "Market analysis and trading insights platform with AI-powered signals",
   "private": true,
-  "engines": {
-    "node": ">=20"
-  },
   "scripts": {
-    "dev": "nodemon --exec \"tsx server.ts\" --watch server.ts --watch src --ext ts,tsx,js,jsx",
-    "build": "prisma generate && next build",
-    "start": "NODE_ENV=production tsx server.ts",
+    "dev": "nodemon --exec \"npx tsx server.ts\" --watch server.ts --watch src --ext ts,tsx,js,jsx 2>&1 | tee dev.log",
+    "build": "next build",
+    "start": "NODE_ENV=production tsx server.ts 2>&1 | tee server.log",
     "lint": "next lint",
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
-    "db:deploy": "prisma migrate deploy",
     "db:reset": "prisma migrate reset"
   },
   "dependencies": {
